# apx

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Justfile  pyproject.toml
.cargo/: config.toml
.claude/skills/asyncio/: SKILL.md
.claude/skills/rust/: SKILL.md
crates/apx/: Cargo.toml
crates/apx/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  serve.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  tracing_fmt.rs
crates/core/: Cargo.toml
crates/core/src/: python_logging.rs  tracing_init.rs
crates/core/src/dev/: backend.rs  client.rs  common.rs  embedded_db.rs  frontend.rs  process.rs  proxy.rs  server.rs
crates/core/src/flux/: mod.rs
crates/core/src/ops/: check.rs  dev.rs  healthcheck.rs
crates/framework/: Cargo.toml
crates/framework/src/: dispatch.rs  lib.rs  pyapi.rs
crates/framework/src/asgi/: app.rs  channel_body.rs  dispatch.rs  mod.rs  queue.rs  scope.rs  slot_receive.rs  slot_send.rs  streaming.rs
crates/framework/src/integration_tests/: mod.rs  shutdown.rs  streaming.rs  supervision.rs  telemetry.rs
crates/framework/src/io/: channel.rs  mod.rs
crates/framework/src/io/reactor/: mod.rs
crates/framework/src/protocol/: mod.rs
crates/framework/src/protocol/http/: error.rs  mod.rs  service.rs
crates/framework/src/protocol/ws/: mod.rs  session.rs
crates/framework/src/supervision/: dev_watcher.rs  mod.rs  signal.rs  supervisor.rs  worker.rs  worker_context.rs
crates/framework/src/supervision/ipc/: channel.rs  mod.rs  protocol.rs
crates/framework/src/telemetry/: config.rs  context.rs  defs.rs  dispatch_metrics.rs  http.rs  logging.rs  metrics.rs  mod.rs  process_metrics.rs  spans.rs  system_metrics.rs
crates/framework/src/transport/: listener.rs  mod.rs  tcp.rs  types.rs
docker/: Dockerfile.apx-local
scripts/bench/: .dockerignore  README.md  app_deploy.py  main.py  profile_analysis.py  scenarios.json
scripts/bench/app/: api.py  main.py  models.py  profiling.py
scripts/bench/app/static/: index.html
scripts/bench/bencher/: app.py  database.py  models.py  report.py  requirements.txt  routes.py  runner.py
scripts/bench/databricks/: .gitignore  databricks.yml
scripts/bench/databricks/apps/bench-apx/: requirements.txt
scripts/bench/databricks/apps/bench-granian/: requirements.txt
scripts/bench/databricks/apps/bench-uvicorn/: requirements.txt
scripts/bench/local/: apx-cross-bench.Dockerfile
scripts/dev/: gen.py
src/apx/: __init__.py  _bridge.py  _core.pyi  _dispatch.py  telemetry.py
src/apx/assets/: entrypoint.ts
tests/: conftest.py  test_dispatch.py  test_telemetry.py
tests/integration/: conftest.py  otlp_models.py  test_apx.py  test_telemetry.py
tests/telemetry/: conftest.py  test_cross_signal.py  test_dispatch_metrics.py  test_error_handling.py  test_event_name.py  test_nested_spans.py  test_otlp_fields.py  test_sequential_spans.py  test_tracing_event_names.py
