[workspace]
members = ["crates/common", "crates/agent", "crates/studio", "crates/core", "crates/mcp", "crates/cli", "crates/databricks_sdk", "crates/apx", "crates/db", "crates/framework"]
resolver = "2"

[workspace.package]
version = "0.3.8"
edition = "2024"
rust-version = "1.92"
description = "APX application framework"
repository = "https://github.com/databricks-solutions/apx"
license = "LicenseRef-Databricks" # SPDX compatible license string, check the LICENSE.md file for the full license text
readme = "README.md"
keywords = ["databricks", "apps", "framework"]
categories = ["development-tools"]

[workspace.dependencies]
# Internal crates
apx-common = { path = "crates/common" }
apx-agent = { path = "crates/agent" }
apx-core = { path = "crates/core" }
apx-mcp = { path = "crates/mcp" }
apx-cli = { path = "crates/cli" }
apx-databricks-sdk = { path = "crates/databricks_sdk" }
apx-db = { path = "crates/db" }
apx-framework = { path = "crates/framework" }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
toml = "0.8.20"
toml_edit = "0.24.0"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

# Async runtime
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "sync", "process", "io-util", "signal", "io-std", "net"] }
tokio-stream = "0.1.17"
futures-core = "0.3.31"
futures-util = "0.3.31"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
rmcp = { version = "0.15", features = ["server", "transport-io", "schemars"] }

# Web server
axum = { version = "0.8.8", features = ["ws"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "stream", "rustls", "http2", "charset", "system-proxy", "multipart"] }
tokio-tungstenite = { version = "0.28", features = ["connect", "rustls-tls-native-roots"] }
hyper-tungstenite = "0.19"

# OpenTelemetry
opentelemetry = "0.29"
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio", "logs", "trace", "metrics", "spec_unstable_metrics_views"] }
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic", "logs", "trace", "metrics"] }
opentelemetry-appender-tracing = { version = "0.29", features = ["experimental_use_tracing_span_context"] }
opentelemetry-proto = "0.31.0"
prost = "0.14.3"

# Logging/tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-opentelemetry = "0.30"
thiserror = "2.0"

# CLI
clap = { version = "4", features = ["derive"] }
console = "0.15"
dialoguer = "0.11.0"
indicatif = "0.17.9"

# Utilities
chrono = "0.4"
dirs = "5.0"
hex = "0.4"
rand = "0.8.5"
walkdir = "2.5.0"
url = "2.5.8"
rust-embed = "8"
zip = "2.2"
flate2 = "1.1"
sha2 = "0.10"
tar = "0.4"
rayon = "1.11.0"
similar = "2.7"

# System
sysinfo = "0.33.1"
notify = "8.2.0"

# Templating
tera = "1.20.0"

# Database clients
tokio-postgres = { version = "0.7.16", features = ["runtime"] }

# Code parsing
biome_css_parser = "0.5.8"
biome_css_syntax = "0.5.8"
biome_rowan = "0.5.8"
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "0.14.5" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "0.14.5" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", tag = "0.14.5" }
schemars = "1.2.0"

# SWC (TypeScript AST & codegen)
swc_common = "18"
swc_ecma_ast = "20"
swc_ecma_codegen = "23"
swc_atoms = "9"

# Temporary files
tempfile = "3.15"

# Test utilities
wiremock = "0.6"

# Embedded resources
which = "7"

# Python embedding (framework)
# IMPORTANT: No "auto-initialize" feature. Without it, accidental PyO3 use in
# the supervisor path panics with "Python is not initialized" — a loud failure
# instead of silent interpreter corruption in the multi-worker fork model.
# NOTE: "extension-module" is NOT set here — it is set only in crates/apx
# (the cdylib). Library crates need to link against libpython for `cargo test`.
pyo3 = { version = "0.28.2", features = ["macros"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
socket2 = "0.6.2"

# Framework: admission control + HTTP middleware
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.6", features = ["trace", "normalize-path", "request-id"] }

# Framework: IPC serialization (msgpack)
rmp-serde = "1"

# Framework: explicit deps used directly in types (not via transitive re-export from axum)
form_urlencoded = "1"
http = "1"
bytes = "1"
http-body-util = "0.1"

[workspace.lints.rust]
unsafe_code = "deny"
warnings = "deny"

# Correctness
unused_must_use = "deny"
dead_code = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_qualifications = "deny"
unused_extern_crates = "deny"
# unreachable_pub = "deny"  # too many existing items to fix at once

# API hygiene
missing_docs = "deny"
missing_debug_implementations = "deny"
missing_copy_implementations = "deny"

# Safety paranoia
trivial_casts = "deny"
trivial_numeric_casts = "deny"
elided_lifetimes_in_paths = "deny"
explicit_outlives_requirements = "deny"

# Idioms
rust_2018_idioms = { level = "deny", priority = -1 }

[workspace.lints.clippy]

# Base strictness
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# Transitive dependency version conflicts we cannot control
multiple_crate_versions = "allow"

# Panic policy
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
panic_in_result_fn = "deny"

# Debug leftovers
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"

# API discipline
# missing_const_for_fn = "deny"
# missing_panics_doc = "deny"
# missing_errors_doc = "deny"

# Performance paranoia
implicit_clone = "deny"
inefficient_to_string = "deny"
redundant_clone = "deny"
large_enum_variant = "deny"

# Complexity
cognitive_complexity = "allow"  # many existing functions exceed threshold; refactor incrementally
# too_many_lines = "deny"
# too_many_arguments = "deny"

# Pedantic lints that are too noisy for this codebase
module_name_repetitions = "allow"
similar_names = "allow"
significant_drop_tightening = "allow"
doc_markdown = "allow"           # 129 items — too pervasive to fix at once
missing_errors_doc = "allow"     # 126 items — add incrementally
must_use_candidate = "allow"     # 66 items — add incrementally
return_self_not_must_use = "allow"
missing_const_for_fn = "allow"   # 30 items — add incrementally
redundant_closure_for_method_calls = "allow"  # 36 items — stylistic preference
option_if_let_else = "allow"     # 18 items — often less readable
unnecessary_wraps = "allow"
items_after_statements = "allow"
unnecessary_box_returns = "allow" # 26 items — deliberate design choice
cast_possible_wrap = "allow"     # integer casts are intentional
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
struct_field_names = "allow"     # same as module_name_repetitions for fields
pub_use = "allow"
use_self = "allow"               # 30 items — Self vs TypeName is stylistic
case_sensitive_file_extension_comparisons = { level = "allow", priority = 1 } # not relevant on our target platforms
too_many_lines = "allow"
missing_fields_in_debug = "allow" # deliberate Debug impls that hide fields
needless_pass_by_value = "allow" # 3 items — often needed for API compatibility
trivial_regex = "allow"
needless_raw_string_hashes = "allow"   # cosmetic; many test strings use r#"..."#
iter_without_into_iter = "allow"

# Style
wildcard_imports = "deny"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"

