[project]
name = "apx"
dynamic = ["version"]
description = "apx is the toolkit for building Databricks Apps"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "renardeinside", email = "polarpersonal@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0", "uvloop>=0.21.0; sys_platform != 'win32'"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: Hatch",
]

[project.scripts]
apx = "apx:_main"

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "databricks-sdk>=0.102.0",
    "diskcache>=5.6.3",
    "docker>=7.1.0",
    "docutils>=0.22.4",
    "grpcio>=1.68.0",
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "mcp>=1.19.0",
    "msgpack>=1.1.2",
    "msgpack-types>=0.7.0",
    "mypy>=1.18.2",
    "opentelemetry-proto>=1.29.0",
    "psycopg[binary,pool]>=3.3.2",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pytest-html>=4.2.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.0",
    "sqlmodel>=0.0.27",
    "tenacity>=9.1.2",
    "tomlkit>=0.14.0",
    "tqdm>=4.67.1",
    "ty>=0.0.12",
    "typer>=0.21.1",
    "types-cachetools>=6.2.0.20251022",
    "types-cffi>=1.17.0.20250915",
    "types-greenlet>=3.2.0.20250915",
    "types-jinja2>=2.11.9",
    "types-pexpect>=4.9.0.20250916",
    "types-protobuf>=6.32.1.20250918",
    "types-psutil>=7.0.0.20251001",
    "types-pyasn1>=0.6.0.20250914",
    "types-pygments>=2.19.0.20250809",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
    "types-tqdm>=4.67.0.20250809",
    "types-ujson>=5.10.0.20250822",
    "uvloop>=0.22.1",
    "websockets>=16.0",
]


[tool.pytest.ini_options]
markers = [
    "integration: integration tests requiring Docker",
]

[tool.mypy]
exclude = ['venv', '.venv', 'src/apx/templates', 'node_modules', 'experiments']


[tool.maturin]
bindings = "pyo3"
module-name = "apx._core"
manifest-path = "crates/apx/Cargo.toml"
python-packages = ["apx"]
python-source = "src"
strip = true

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.ty.src]
exclude = [
    "src/apx/binaries/*",
    "src/apx/templates/*",
    "**/node_modules",
    "**/__pycache__",
    "**/.jinja2",
    "experiments"
]
