[package]
name = "apx-bin"
version = "0.3.8"
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = ["apx-framework/mimalloc"]

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
apx-cli.workspace = true
apx-core.workspace = true
apx-framework.workspace = true
pyo3 = { workspace = true, features = ["extension-module"] }
