[package]
name = "apx-cli"
version = "0.3.8"
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
apx-common.workspace = true
apx-core = { path = "../core" , version = "0.3.8" }
apx-db.workspace = true
apx-framework.workspace = true
apx-databricks-sdk = { path = "../databricks_sdk" , version = "0.3.8" }
apx-mcp = { path = "../mcp" , version = "0.3.8" }
clap.workspace = true
console.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
tera.workspace = true
walkdir.workspace = true
similar.workspace = true
rand.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
reqwest.workspace = true
toml.workspace = true
toml_edit.workspace = true

[dev-dependencies]
tempfile.workspace = true
wiremock.workspace = true
