[package]
name = "apx-common"
version = "0.3.8"
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
dirs.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
